--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "ts-localstorage": "^2.0.0",
     "typescript": "^4.9.4",
+    "use-local-storage-state": "^18.1.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.75.0"
   },
