--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/node-sass": "^4.11.3",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "ts-localstorage": "^2.0.0",
     "typescript": "^4.9.4",
